hphp/test/slow/class_constant/abstract_const2.php.expectf

Fatal error: syntax error, unexpected '=', expecting ',' or ';' in %stest/slow/class_constant/abstract_const2.php on line 5
